fix: adjust headings spacing for only WYSIWYG content

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_structured-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_structured-card.scss
@@ -1,10 +1,14 @@
 .hb-card--structured {
   width: 100%;
-  border-bottom: 1px solid $su-color-driftwood;
+  border-bottom: 1px solid $su-color-driftwood; 
   padding-bottom: hb-calculate-rems(28px);
 
   .hb-card__img {
     margin-bottom: hb-calculate-rems(20px);
+  }
+
+  h3.field-content {
+    margin-top: 0;
   }
 
   .hb-card__subtitle {
