--- a/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.text.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.text.scss
@@ -3,7 +3,6 @@
     font-weight: hb-theme-font-weight(semibold);
     font-size: hb-calculate-rems(24px);
     line-height: 120%;
-    margin: hb-calculate-rems(28px) 0 hb-calculate-rems(10px);
   }
 
   @include grid-media-min('md') {
@@ -17,11 +16,9 @@
     font-weight: hb-theme-font-weight(semibold);
     font-size: hb-calculate-rems(38px);
     line-height: 112%;
-    margin: hb-calculate-rems(48px) 0 hb-calculate-rems(14px);
 
     @include grid-media-min('md') {
       font-size: hb-calculate-rems(48px);
-      margin: hb-calculate-rems(48px) 0 hb-calculate-rems(16px);
     }
   }
 }
@@ -31,11 +28,9 @@
     font-weight: hb-theme-font-weight(semibold);
     font-size: hb-calculate-rems(32px);
     line-height: 112%;
-    margin: hb-calculate-rems(48px) 0 hb-calculate-rems(12px);
 
     @include grid-media-min('md') {
       font-size: hb-calculate-rems(38px);
-      margin: hb-calculate-rems(48px) 0 hb-calculate-rems(14px);
     }
   }
 }
@@ -50,8 +45,7 @@
   @include hb-colorful {
     font-weight: hb-theme-font-weight(semibold);
     font-size: hb-calculate-rems(20px);
-    line-height: 122%;
-    margin: hb-calculate-rems(18px) 0 hb-calculate-rems(4px);
+    line-height: 122%
   }
 }
 
@@ -59,8 +53,7 @@
   @include hb-colorful {
     font-weight: hb-theme-font-weight(semibold);
     font-size: hb-calculate-rems(18px);
-    line-height: 124%;
-    margin: hb-calculate-rems(18px) 0 hb-calculate-rems(3px);
+    line-height: 124%
   }
   }
 
@@ -69,8 +62,7 @@
     text-transform: uppercase;
     font-weight: hb-theme-font-weight(semibold);
     font-size: hb-calculate-rems(16px);
-    line-height: 128%;
-    margin: hb-calculate-rems(18px) 0 hb-calculate-rems(3px);
+    line-height: 128%
   }
 }
 
