--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
@@ -2,6 +2,54 @@
 .field-hs-text-area {
   margin-bottom: hb-calculate-rems(48px);
 
+  .block-layout-builder {
+    background-color: lightyellow;
+  }
+
+  h1 {
+    @include hb-colorful {
+      margin: hb-calculate-rems(48px) 0 hb-calculate-rems(14px);
+
+    @include grid-media-min('md') {
+      margin: hb-calculate-rems(48px) 0 hb-calculate-rems(16px);
+    }
+    }
+  }
+
+  h2 {
+    @include hb-colorful {
+      margin: hb-calculate-rems(48px) 0 hb-calculate-rems(12px);
+
+    @include grid-media-min('md') {
+      margin: hb-calculate-rems(48px) 0 hb-calculate-rems(14px);
+    }
+    }
+  }
+
+  h3 {
+    @include hb-colorful {
+      margin: hb-calculate-rems(28px) 0 hb-calculate-rems(10px);
+    }
+  }
+
+  h4 {
+    @include hb-colorful {
+      margin: hb-calculate-rems(18px) 0 hb-calculate-rems(4px);
+    }
+  }
+
+  h5 {
+    @include hb-colorful {
+    margin: hb-calculate-rems(18px) 0 hb-calculate-rems(3px);
+    }
+  }
+
+  h6 {
+    @include hb-colorful {
+    margin: hb-calculate-rems(18px) 0 hb-calculate-rems(3px);
+    }
+  }
+
   // add icon to external links only
   p {
     a[href^="http"]:not([class]) {
@@ -58,6 +106,11 @@
 
     @include hb-colorful {
       color: hb-colorful-variation(primary);
+      margin: hb-calculate-rems(48px) 0 hb-calculate-rems(14px);
+
+      @include grid-media-min('md') {
+        margin: hb-calculate-rems(48px) 0 hb-calculate-rems(16px);
+      }
     }
   }
 
